--- a/client/style.css
+++ b/client/style.css
@@ -18,3 +18,11 @@
     display: flex;
     flex-direction: row;
 }
+
+.nate-add-margin {
+    margin: 10px;
+}
+
+.nate-hidden{
+    display: none;
+}
